--- a/src/styling/ContentCard.css
+++ b/src/styling/ContentCard.css
@@ -6,7 +6,7 @@
     /* Fixed height */
     margin: 10px;
     /* Adjust margin to control spacing between cards */
-    border-radius: 8px;
+    border-radius: 5px;
     /* Rounded corners */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /* Subtle shadow */
@@ -17,6 +17,7 @@
     display: flex;
     /* Stack child elements vertically */
     flex-direction: column;
+    background-color: white;
 }
 
 .content-card:hover {
@@ -47,6 +48,18 @@
 .content-body::-webkit-scrollbar-thumb:hover {
     background: #555;
     /* Thumb color on hover */
+}
+
+.content-image-container {
+    width: 100%;
+    height: 200px;
+    /* Fixed height for the image container */
+    background-color: #64C8C8; /* Background color */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
 }
 
 .content-image {
