--- a/src/styling/ContentCard.css
+++ b/src/styling/ContentCard.css
@@ -2,13 +2,14 @@
     position: relative;
     width: 320px;
     /* Fixed width */
-    height: 400px;
+    height: 380px;
     /* Fixed height */
-    margin: 20px;
+    margin: 30px;
     /* Adjust margin to control spacing between cards */
     border-radius: 5px;
     /* Rounded corners */
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.3), 0 6px 20px rgba(255, 255, 255, 0.3); /* Subtle shadow */
+    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.3), 0 6px 20px rgba(255, 255, 255, 0.3);
+    /* Subtle shadow */
     /* Subtle shadow */
     transition: transform 0.3s, box-shadow 0.3s;
     /* Smooth transition for hover effects */
@@ -18,6 +19,12 @@
     /* Stack child elements vertically */
     flex-direction: column;
     background-color: white;
+}
+
+.card-actions {
+    padding: 10px;
+    border-top: 1px solid #f0f0f0;
+    background-color: #ffffff;
 }
 
 .content-card:hover {
@@ -50,12 +57,14 @@
     /* Thumb color on hover */
 }
 
-.tigerhall-icon{
+.tigerhall-icon {
     width: 30px !important;
     height: 30px !important;
 }
 
 .content-image-container {
+    overflow: hidden;
+    flex-shrink: 0;
     width: 100%;
     height: 180px;
     /* Fixed height for the image container */
@@ -71,7 +80,7 @@
 .content-image {
     width: 100%;
     /* Make the image fill the card width */
-    height: 200px;
+    height: 100%;
     /* Fixed height for the image */
     object-fit: cover;
     /* Ensure the image covers the area without distortion */
@@ -80,6 +89,9 @@
 }
 
 .content-body {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
     flex: 1;
     /* Take remaining space after image */
     padding: 5px;
@@ -99,6 +111,7 @@
     /* Space between title and description */
     text-align: left;
     /* Align text to the left */
+    font-family: "PP Neue Montreal";
 }
 
 .content-description {
@@ -108,12 +121,14 @@
     /* Space between description and categories */
     text-align: left;
     /* Align text to the left */
+    font-family: "PP Neue Montreal";
 }
 
 .content-categories,
 .content-experts {
     margin-top: 4px;
     margin-bottom: 10px;
+    font-family: "PP Neue Montreal";
     /* Space for bottom margin */
     text-align: left;
     /* Align text to the left */
@@ -125,6 +140,7 @@
     /* Adjust font size of the category */
     text-align: left;
     /* Align text to the left */
+    font-family: "PP Neue Montreal";
 }
 
 .content-expert {
@@ -133,19 +149,6 @@
     /* Adjust font size of the expert details */
     text-align: left;
     /* Align text to the left */
-}
-
-.card-actions {
-    position: absolute;
-    /* Fix position within the card */
-    bottom: 10px;
-    /* Distance from bottom */
-    right: 10px;
-    /* Distance from right */
-    display: flex;
-    /* Align icons horizontally */
-    gap: 8px;
-    /* Space between icons */
 }
 
 .card-actions .chakra-icon-button {
