--- a/src/styling/ContentCard.css
+++ b/src/styling/ContentCard.css
@@ -46,14 +46,14 @@
 }
 
 .content-body::-webkit-scrollbar-thumb {
-    background-color: #888;
+    background-color: #DD6B20;
     /* Thumb color */
     border-radius: 3px;
     /* Rounded corners */
 }
 
 .content-body::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #DD6B20;
     /* Thumb color on hover */
 }
 
@@ -127,7 +127,7 @@
 .content-categories,
 .content-experts {
     margin-top: 4px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     font-family: "PP Neue Montreal";
     /* Space for bottom margin */
     text-align: left;
